# InsightTool_v2

./: .gitignore  Claude.md  README.md  projectplan  projectplan.md  test-guide.md  test-transcript.md  ux-flow.md
.claude/commands/: phase-check.md  start-dev.md  status.md  test.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: guide_reviewer.py  theme_extractor.py  transcript_organiser.py
backend/app/api/: guides.py  projects.py  sessions.py  themes.py
backend/app/db/: memory_store.py  store.py  supabase.py
backend/app/models/: guide.py  insight.py  project.py  session.py  theme.py
backend/app/services/: anonymiser.py  parser.py
backend/supabase/migrations/: 001_initial_schema.sql
backend/tests/: test_parser.py
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/pages/: GuideReview.tsx  ProjectDetail.tsx  ProjectList.tsx  SessionDetail.tsx  ThemesOverview.tsx  TranscriptUpload.tsx
frontend/src/types/: models.ts
